--- a/.emacs.files/init.org
+++ b/.emacs.files/init.org
@@ -707,7 +707,7 @@ Install and enable the theme.
 
 #+begin_src emacs-lisp :tangle yes
   (use-package gruvbox-theme
-    :config (load-theme 'monokai t)
+    :config (load-theme 'gruvbox t)
     )
 #+end_src
 
@@ -1220,7 +1220,7 @@ TODO: Document this.
     ;; (web-mode . lsp-deferred)
     (web-mode . tide-setup)
     ;; (web-mode . git-gutter-mode)           ; Git info in the maring.
-    (web-mode . npm-mode)                  ; Set the npm mode to easily run scripts from package.json.
+    ;; (web-mode . npm-mode)                  ; Set the npm mode to easily run scripts from package.json.
     ;; (web-mode . display-line-numbers-mode) ; Show line numbers.
     (before-save . (lambda ()
                      (when (eq major-mode 'web-mode)
